<?xml version="1.1"?>
<package format="2">
  <name>synolo</name>
  <version>1.1.0</version>
  <description>LiDAR filtering library.</description>
  <license>Unlicense</license>

  <author>Abdulelah Mulla</author>
  <maintainer email="aehmul@yahoo.com">Abdulelah Mulla</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>catkin</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
  </export>
</package>